Creado mediante Colaboratory

--- a/Ej_3_3_suriano.ipynb
+++ b/Ej_3_3_suriano.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9afm9LxJJhDDO47rYtflT",
+      "authorship_tag": "ABX9TyNOrlPg6JuR59FWNvshv+NC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,20 +431,11 @@
       "cell_type": "markdown",
       "source": [
         "A continuación, elegimos los features mas representativos:\n",
-        "Existen varios features que se hallan muy sesgados y concentran todos sus datos en una sola frecuencia, por ejemplo: 'acousticness','instrumentaless','time_signature'. "
+        "Existen varios features que se hallan muy sesgados y concentran todos sus datos en una sola frecuencia, por ejemplo: 'acousticness','instrumentaless','time_signature'.  entre otros."
       ],
       "metadata": {
         "id": "Y4ZGdR2xgSoc"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ws4h9AWmgSOL"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
