Creado mediante Colaboratory

--- a/Ej_3_3_suriano.ipynb
+++ b/Ej_3_3_suriano.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOrlPg6JuR59FWNvshv+NC",
+      "authorship_tag": "ABX9TyMIF7PrAFUP0ZtbRYslWiFt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "height": 364
         },
         "id": "4EAPLJOB4hF-",
-        "outputId": "eb9a9171-1e51-4f6b-952d-a600267c1722"
+        "outputId": "d112c21c-1ce7-4199-af9d-66a68d60b674"
       },
       "outputs": [
         {
@@ -75,7 +75,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1ee45367-cca1-4789-a84c-fe34b0658c60\">\n",
+              "  <div id=\"df-47ae277c-f196-42cd-abe1-47fecdd5d0d3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -260,7 +260,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ee45367-cca1-4789-a84c-fe34b0658c60')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-47ae277c-f196-42cd-abe1-47fecdd5d0d3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -311,12 +311,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1ee45367-cca1-4789-a84c-fe34b0658c60 button.colab-df-convert');\n",
+              "          document.querySelector('#df-47ae277c-f196-42cd-abe1-47fecdd5d0d3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1ee45367-cca1-4789-a84c-fe34b0658c60');\n",
+              "          const element = document.querySelector('#df-47ae277c-f196-42cd-abe1-47fecdd5d0d3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -390,7 +390,7 @@
           "height": 927
         },
         "id": "ysxM73xVZG-8",
-        "outputId": "b246e71c-e78b-460c-a6c6-c8ead8f01c1f"
+        "outputId": "c942d24e-ebc2-4aa9-b94d-df8f2a8c90b5"
       },
       "execution_count": null,
       "outputs": [
@@ -464,7 +464,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YOovLhjg5zyA",
-        "outputId": "fefffaba-c523-42b1-c73f-97acaecf8a4e"
+        "outputId": "308b177b-7632-47b2-ca8c-f3eafe106991"
       },
       "execution_count": null,
       "outputs": [
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 4
         }
       ]
     },
@@ -511,7 +511,7 @@
           "height": 295
         },
         "id": "FMpsdW7N51rm",
-        "outputId": "00930fe4-dc89-48e4-b759-a51bfb7b3367"
+        "outputId": "bbfe805e-2dab-4ff7-c63e-fbe2f98d2356"
       },
       "execution_count": null,
       "outputs": [
@@ -543,20 +543,69 @@
     {
       "cell_type": "code",
       "source": [
+        "# Elegimos el número de vecinos que determina el máximo score: (si hay varios, se muestra el menor)\n",
+        "\n",
+        "max_k = max(score)\n",
+        "k = min([index for index, item in enumerate(score) if item == max_k])\n",
+        "print('numero de vecinos óptimo:' , k,'. Score logrado: ', max_k)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-tom3oxpNwB4",
+        "outputId": "4cca57cc-5679-4210-93dd-7dfbea1c23db"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "numero de vecinos óptimo: 22 . Score logrado:  0.5767326732673267\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.metrics import classification_report\n",
+        "import sklearn as sklearn\n",
+        "from sklearn import neighbors\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Modelo final con el k que maximiza el score\n",
+        "\n",
+        "# elegimos los features a utilizar según la distribución que presenten sus datos (histogramas muy sesgados y con poca distribución uniforme se descartan)\n",
+        "# separacion de datos de training y testeo \n",
+        "\n",
+        "#X_train, X_test, y_train, y_test = train_test_split(df_data, df_target, test_size=0.2, random_state=20)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(df_data[['danceability','duration_ms','key','energy','mode','tempo','valence']], df_target, test_size=0.2, random_state=20)\n",
+        "\n",
+        "#'acousticness',\t'danceability','duration_ms','energy',\t'instrumentalness'\t,'key',\t'liveness',\t'loudness',\t'mode',\t'speechiness',\t'tempo',\t'time_signature',\t'valence'\n",
+        "\n",
+        "\n",
+        "# llamada al modelo de entrenamiento\n",
+        "knn = neighbors.KNeighborsClassifier(n_neighbors=k)\n",
+        "knn.fit(X_train, y_train)\n",
         "\n",
         "# Reporte automático de métricas\n",
         " \n",
         "target_pred = y_test\n",
         "target_exp = knn.predict(X_test)\n",
-        "print(classification_report(target_exp, target_pred))"
+        "print(classification_report(target_exp, target_pred))\n",
+        "\n",
+        "# Calculamos también la matriz de confusión:\n",
+        "\n",
+        "print(sklearn.metrics.confusion_matrix(target_exp, target_pred))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jceR5czfnbJU",
-        "outputId": "3f717d35-1a3f-498a-c46b-d36de3d600fe"
+        "outputId": "82c08566-3c6d-41bd-d0c6-a0a2e4ba8979"
       },
       "execution_count": null,
       "outputs": [
@@ -566,13 +615,15 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.52      0.51      0.51       190\n",
-            "           1       0.57      0.59      0.58       214\n",
+            "           0       0.65      0.50      0.57       237\n",
+            "           1       0.46      0.61      0.53       167\n",
             "\n",
             "    accuracy                           0.55       404\n",
-            "   macro avg       0.55      0.55      0.55       404\n",
-            "weighted avg       0.55      0.55      0.55       404\n",
-            "\n"
+            "   macro avg       0.56      0.56      0.55       404\n",
+            "weighted avg       0.57      0.55      0.55       404\n",
+            "\n",
+            "[[119 118]\n",
+            " [ 65 102]]\n"
           ]
         }
       ]
