Creado mediante Colaboratory

--- a/Ej_4.ipynb
+++ b/Ej_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4omIzeoujZNaWz08q6hLR",
+      "authorship_tag": "ABX9TyNdXlWQ7PabXckiAPCTxafp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,19 +53,19 @@
       "metadata": {
         "id": "YSG1-NhEzrQj"
       },
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 505
         },
         "id": "i_LSBAp4BeBM",
-        "outputId": "5111f115-628b-46c9-9189-bacc5bda8973"
+        "outputId": "8b434cc0-42d2-41a1-8935-c811555b1d0b"
       },
       "outputs": [
         {
@@ -141,7 +141,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4289fb2a-90e4-487f-8f5d-f68aff310311\">\n",
+              "  <div id=\"df-c762c647-0140-4980-9ea2-ac18371f8997\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -453,7 +453,7 @@
               "</table>\n",
               "<p>569 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4289fb2a-90e4-487f-8f5d-f68aff310311')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c762c647-0140-4980-9ea2-ac18371f8997')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -504,12 +504,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4289fb2a-90e4-487f-8f5d-f68aff310311 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c762c647-0140-4980-9ea2-ac18371f8997 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4289fb2a-90e4-487f-8f5d-f68aff310311');\n",
+              "          const element = document.querySelector('#df-c762c647-0140-4980-9ea2-ac18371f8997');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -532,7 +532,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 2
         }
       ],
       "source": [
@@ -556,16 +556,16 @@
           "height": 446
         },
         "id": "30q9jsITC-OA",
-        "outputId": "28a296b5-0f83-4f64-acb6-c9cd8f9be322"
+        "outputId": "7bc4f171-f510-4a52-e5e2-6661666516a4"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+            "<ipython-input-3-5efe28c13774>:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+            "  df = df.drop(['Unnamed: 32','id'], 1)\n"
           ]
         },
         {
@@ -636,7 +636,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-252ab336-b0f6-459e-84c8-09bbb13ccf32\">\n",
+              "  <div id=\"df-f26d6865-0029-4ac1-a324-f88b001a9c07\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -876,7 +876,7 @@
               "</table>\n",
               "<p>8 rows × 30 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-252ab336-b0f6-459e-84c8-09bbb13ccf32')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f26d6865-0029-4ac1-a324-f88b001a9c07')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -927,12 +927,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-252ab336-b0f6-459e-84c8-09bbb13ccf32 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f26d6865-0029-4ac1-a324-f88b001a9c07 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-252ab336-b0f6-459e-84c8-09bbb13ccf32');\n",
+              "          const element = document.querySelector('#df-f26d6865-0029-4ac1-a324-f88b001a9c07');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -955,7 +955,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 3
         }
       ]
     },
@@ -984,16 +984,16 @@
           "height": 1000
         },
         "id": "nuf2rHyCGfOF",
-        "outputId": "2abb873a-5d79-4f91-cd44-6871155c0e5e"
+        "outputId": "0fcbb5f6-f4c3-4eec-eb43-ee25229dfeab"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:12: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
-            "  if sys.path[0] == '':\n"
+            "<ipython-input-4-bef3e3cacf71>:12: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+            "  df_features = df.drop(['diagnosis'], 1)\n"
           ]
         },
         {
@@ -1077,9 +1077,9 @@
           "height": 295
         },
         "id": "hhjqOthHI7gl",
-        "outputId": "84fdf6e7-dd80-4919-eefd-581c1492ecc7"
+        "outputId": "f2abded7-7663-495f-80cb-576df7f21779"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1111,7 +1111,7 @@
         "id": "Sgch2QFJJrf9",
         "outputId": "8b45f111-8c0b-4e35-f50c-a26913183d0b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1149,7 +1149,7 @@
         "id": "A44FrhfMLjsP",
         "outputId": "04d84017-bbb3-48e2-ebc4-7e79a8f83f76"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1203,7 @@
         "id": "aT1G4xa-P3DF",
         "outputId": "b06f2e10-1275-4528-ca89-1d38531c74dd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1233,23 +1233,33 @@
         "forest = RandomForestClassifier(criterion='entropy', n_estimators=N, random_state=1, n_jobs=2)\n",
         "forest.fit(X_train, y_train)\n",
         "y_pred = forest.predict(X_test)\n",
-        "print('Accuracy: %.3f' % accuracy_score(y_test, y_pred))"
+        "print('Accuracy: %.3f' % accuracy_score(y_test, y_pred))\n",
+        "print('----------------------------------------------')\n",
+        "\n",
+        "# Calculamos también la matriz de confusión:\n",
+        "\n",
+        "print('Matriz de confusion: ')\n",
+        "print(sklearn.metrics.confusion_matrix(y_test, y_pred))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xOrt3fpzYkiM",
-        "outputId": "c5838ee6-2244-47ac-9ee2-d1d8b54d9e2f"
+        "outputId": "49c10fae-ab5a-4184-8045-643fb332726d"
       },
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "N- estimador con mayor Score:  47\n",
-            "Accuracy: 0.991\n"
+            "N- estimador con mayor Score:  6\n",
+            "Accuracy: 0.956\n",
+            "----------------------------------------------\n",
+            "Matriz de confusion: \n",
+            "[[66  0]\n",
+            " [ 5 43]]\n"
           ]
         }
       ]
